--- a/component.html
+++ b/component.html
@@ -1,6 +1,6 @@
 <!--
 // v0 by Vercel.
-// https://v0.dev/t/fCfPTmpWSlx
+// https://v0.dev/t/ziQM9L6atoV
 -->
 
 <div class="w-full max-w-4xl mx-auto py-12 md:py-16 lg:py-20">
@@ -46,7 +46,7 @@
       </div>
       <div class="p-4 md:p-6 flex flex-col justify-between">
         <div>
-          <h3 class="text-lg md:text-xl font-semibold mb-2">软件工程师</h3>
+          <h3 class="text-lg md:text-xl font-semibold mb-2 cursor-pointer">软件工程师</h3>
           <p class="text-muted-foreground text-sm md:text-base">寻求具有丰富JavaScript技能的有经验软件工程师。</p>
         </div>
         <div class="mt-4 flex items-center justify-between">
@@ -92,7 +92,7 @@
       </div>
       <div class="p-4 md:p-6 flex flex-col justify-between">
         <div>
-          <h3 class="text-lg md:text-xl font-semibold mb-2">营销协调员</h3>
+          <h3 class="text-lg md:text-xl font-semibold mb-2 cursor-pointer">营销协调员</h3>
           <p class="text-muted-foreground text-sm md:text-base">加入我们充满活力的营销团队,助力业务增长。</p>
         </div>
         <div class="mt-4 flex items-center justify-between">
@@ -138,7 +138,7 @@
       </div>
       <div class="p-4 md:p-6 flex flex-col justify-between">
         <div>
-          <h3 class="text-lg md:text-xl font-semibold mb-2">平面设计师</h3>
+          <h3 class="text-lg md:text-xl font-semibold mb-2 cursor-pointer">平面设计师</h3>
           <p class="text-muted-foreground text-sm md:text-base">
             寻求一位才华横溢的平面设计师,创造出视觉震撼的设计。
           </p>
@@ -186,7 +186,7 @@
       </div>
       <div class="p-4 md:p-6 flex flex-col justify-between">
         <div>
-          <h3 class="text-lg md:text-xl font-semibold mb-2">产品经理</h3>
+          <h3 class="text-lg md:text-xl font-semibold mb-2 cursor-pointer">产品经理</h3>
           <p class="text-muted-foreground text-sm md:text-base">寻求一位出色的产品经理,推动产品创新与发展。</p>
         </div>
         <div class="mt-4 flex items-center justify-between">
@@ -232,7 +232,7 @@
       </div>
       <div class="p-4 md:p-6 flex flex-col justify-between">
         <div>
-          <h3 class="text-lg md:text-xl font-semibold mb-2">数据分析师</h3>
+          <h3 class="text-lg md:text-xl font-semibold mb-2 cursor-pointer">数据分析师</h3>
           <p class="text-muted-foreground text-sm md:text-base">
             寻求一位精通数据分析的专业人士,为业务提供数据支持。
           </p>
@@ -280,7 +280,7 @@
       </div>
       <div class="p-4 md:p-6 flex flex-col justify-between">
         <div>
-          <h3 class="text-lg md:text-xl font-semibold mb-2">内容编辑</h3>
+          <h3 class="text-lg md:text-xl font-semibold mb-2 cursor-pointer">内容编辑</h3>
           <p class="text-muted-foreground text-sm md:text-base">
             寻求一位出色的内容编辑,为我们的网站创作优质内容。
           </p>
@@ -328,7 +328,7 @@
       </div>
       <div class="p-4 md:p-6 flex flex-col justify-between">
         <div>
-          <h3 class="text-lg md:text-xl font-semibold mb-2">项目经理</h3>
+          <h3 class="text-lg md:text-xl font-semibold mb-2 cursor-pointer">项目经理</h3>
           <p class="text-muted-foreground text-sm md:text-base">
             寻求一位富有经验的项目经理,带领团队高效交付项目。
           </p>
@@ -376,7 +376,7 @@
       </div>
       <div class="p-4 md:p-6 flex flex-col justify-between">
         <div>
-          <h3 class="text-lg md:text-xl font-semibold mb-2">市场营销专员</h3>
+          <h3 class="text-lg md:text-xl font-semibold mb-2 cursor-pointer">市场营销专员</h3>
           <p class="text-muted-foreground text-sm md:text-base">寻求一位热情洋溢的市场营销专员,推动产品销售。</p>
         </div>
         <div class="mt-4 flex items-center justify-between">
@@ -422,7 +422,7 @@
       </div>
       <div class="p-4 md:p-6 flex flex-col justify-between">
         <div>
-          <h3 class="text-lg md:text-xl font-semibold mb-2">用户体验设计师</h3>
+          <h3 class="text-lg md:text-xl font-semibold mb-2 cursor-pointer">用户体验设计师</h3>
           <p class="text-muted-foreground text-sm md:text-base">
             寻求一位出色的用户体验设计师,打造优秀的产品交互体验。
           </p>
@@ -470,7 +470,7 @@
       </div>
       <div class="p-4 md:p-6 flex flex-col justify-between">
         <div>
-          <h3 class="text-lg md:text-xl font-semibold mb-2">数据科学家</h3>
+          <h3 class="text-lg md:text-xl font-semibold mb-2 cursor-pointer">数据科学家</h3>
           <p class="text-muted-foreground text-sm md:text-base">
             寻求一位精通数据科学的专业人士,为业务提供数据驱动的洞见。
           </p>
